--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1> Find your perfect flatshare </h1>
-<h2> London's premier mature flatshare site. </h2>
+<h1> Find your perfect flatshare. </h1>
+<h2> London's premier mature flatshare site </h2>
