--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1> Find your perfect flatshare. </h1>
 <h2> London's premier mature flatshare site </h2>
+<img src="https://bit.ly/fcc-relaxing-cat" alt="Cat">
