--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1> Find your perfect flatshare. </h1>
 <h2> London's premier mature flatshare site </h2>
-<img src="https://bit.ly/fcc-relaxing-cat" alt="Cat">
+<img src="https://drive.google.com/open?id=0B7JMffA7pNVLYzQ2US02QmthcG8" alt="Home">
