--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1> Find your perfect flatshare. </h1>
 <h2> London's premier mature flatshare site </h2>
-<img src="file:///Users/wdespard/Desktop/Home%20(C).jpg" alt="Home">
+<img src="https://www.dropbox.com/s/xn7vgn4px30f08v/Home%20%28C%29.jpg?dl=0" alt="Home">
