--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <h1> Find your perfect flatshare. </h1>
 <h2> London's premier mature flatshare site </h2>
-<img src="https://www.dropbox.com/s/xn7vgn4px30f08v/Home%20%28C%29.jpg?dl=0" alt="Home">
-<img src="https://bit.ly/fcc-relaxing-cat" alt="Cat">
+<img src="https://user-images.githubusercontent.com/30522957/28748518-c44ef9f2-74b1-11e7-9e03-5cb12a3966e4.jpg" alt="Home">
