--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1 style="color:white" > Find your perfect flatshare. </h1>
 <h2 style="color:white" > London's premier mature flatshare site </h2>
-<img src="https://user-images.githubusercontent.com/30522957/28748518-c44ef9f2-74b1-11e7-9e03-5cb12a3966e4.jpg" alt="Home">
+<style> body {background-image: url ("https://user-images.githubusercontent.com/30522957/28748518-c44ef9f2-74b1-11e7-9e03-5cb12a3966e4.jpg") ;} </style>
