--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<h1 style="color:white" > Find your perfect flatshare. </h1>
+<h1 class="h-1" > Find your perfect flatshare. </h1>
+
+<style>
+  .h-1 {
+    color: white;
+  }
+
+  .h-1 {
+    font-size: 40px;
+  }
+  .h-1 {font-family: lato;}
+</style>
+
 <h2 style="color:white" > London's premier mature flatshare site </h2>
 
 <head>
