--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   .h-1 {
     font-size: 40px;
   }
-  .h-1 {font-family: lato;}
+  .h-1 {font-family: lato-regular;}
 </style>
 
 <h2 style="color:white" > London's premier mature flatshare site </h2>
