--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
   .h-1 {
     font-size: 40px;
   }
-  .h-1 {font-family: lato-regular;}
+  .h-1 {font-family: lato;}
 </style>
 
-<h2 style="color:white" > London's premier mature flatshare site </h2>
+<h2 class="h-2" > London's premier mature flatshare site </h2>
+
+<style>
+  .h-2 {
+    color: white;
+  }
+
+  .h-2 {
+    font-size: 20px;
+  }
+  .h-2 {font-family: lato;}
+</style>
 
 <head>
 <style>
