--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ body {
 </style>
 </head>
 
-<center> <h1 class="h-1" > Find your perfect flatshare. </h1>
+<center> <h1 class="h-1" > Find your perfect flatshare. </h1> </center>
 
 <style>
   .h-1 {
