--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
   .h-1 {font-family: lato;}
 </style>
 
-<h2 class="h-2" > London's premier mature flatshare site </h2>
+<center> <h2 class="h-2" > London's premier mature flatshare site </h2> </center>
 
 <style>
   .h-2 {
