--- a/index.html
+++ b/index.html
@@ -29,3 +29,6 @@ body {
   }
   .h-2 {font-family: lato;}
 </style>
+
+<img src="https://user-images.githubusercontent.com/30522957/28749162-895a91ee-74b6-11e7-8a19-19db18615589.png" alt="myHomeshare Logo">
+
