--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@ body {
 </style>
 </head>
 
-<center> <h1 class="h-1" > Find your perfect flatshare. </h1> </center>
+<center> <h1> Find your perfect flatshare. </h1> </center>
 
 <style>
-  .h-1 {
+  h1 {
     color: white;
   }
-  .h-1 {
+  h1 {
     font-size: 40px;
   }
-  .h-1 {font-family: lato;}
+  h1 {font-family: lato;}
 </style>
 
 <center> <h2 class="h-2" > London's premier mature flatshare site </h2> </center>
