--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@ body {
   h1 {font-family: lato;}
 </style>
 
-<center> <h2 class="h-2" > London's premier mature flatshare site </h2> </center>
+<center> <h2> London's premier mature flatshare site </h2> </center>
 
 <style>
-  .h-2 {
+  h2 {
     color: white;
   }
-  .h-2 {
+  h2 {
     font-size: 20px;
   }
-  .h-2 {font-family: lato;}
+  h2 {font-family: lato;}
 </style>
 
 <img src="https://user-images.githubusercontent.com/30522957/28749162-895a91ee-74b6-11e7-8a19-19db18615589.png" alt="myHomeshare Logo">
