--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@ body {
 
 <center> <h1> Find your perfect flatshare. </h1> </center>
 
-<style>
-  h1 {
-    color: white;
-  }
-  h1 {
-    font-size: 40px;
-  }
-  h1 {font-family: lato;}
-</style>
+<style> h1 {color: white; font-size: 40px; font-family: lato} </style>
 
 <center> <h2> London's premier mature flatshare site </h2> </center>
 
