--- a/index.html
+++ b/index.html
@@ -10,16 +10,7 @@ body {
 <style> h1 {color: white; font-size: 40px; font-family: lato} </style>
 
 <center> <h2> London's premier mature flatshare site </h2> </center>
-
-<style>
-  h2 {
-    color: white;
-  }
-  h2 {
-    font-size: 20px;
-  }
-  h2 {font-family: lato;}
-</style>
+<style> h2 {color: white; font-size: 20px; font-family: lato;} </style>
 
 <img src="https://user-images.githubusercontent.com/30522957/28749162-895a91ee-74b6-11e7-8a19-19db18615589.png" alt="myHomeshare Logo">
 
