--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<head> <style> body {background-image: url ("https://user-images.githubusercontent.com/30522957/28748518-c44ef9f2-74b1-11e7-9e03-5cb12a3966e4.jpg");} </style> </head>
+<head> 
+<style> body {background-image: url ("https://user-images.githubusercontent.com/30522957/28748518-c44ef9f2-74b1-11e7-9e03-5cb12a3966e4.jpg");} </style> 
+</head>
 
 <center> <h1> Find your perfect flatshare. </h1> </center>
 <style> h1 {color: white; font-size: 40px; font-family: lato} </style>
