--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
 <style> h2 {color: white; font-size: 20px; font-family: lato;} </style>
 
 <span style= position: absolute; top: 80 px; left: 100 px;" >
-<img src="https://user-images.githubusercontent.com/30522957/28749162-895a91ee-74b6-11e7-8a19-19db18615589.png" alt="myHomeshare Logo" /span>
+<img src="https://user-images.githubusercontent.com/30522957/28749162-895a91ee-74b6-11e7-8a19-19db18615589.png" alt="myHomeshare Logo"> </span>
