--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <center> <h2> London's premier mature flatshare site </h2> </center>
 <style> h2 {color: white; font-size: 20px; font-family: lato} </style>
 
-<img>
+<img
 <style> {position: absolute; top: 80 px; left: 100 px} </style> 
-src="https://user-images.githubusercontent.com/30522957/28749162-895a91ee-74b6-11e7-8a19-19db18615589.png" alt="myHomeshare Logo"
-</img>
+src="https://user-images.githubusercontent.com/30522957/28749162-895a91ee-74b6-11e7-8a19-19db18615589.png" alt="myHomeshare Logo">
