--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head> <style> body {background-image: url("https://user-images.githubusercontent.com/30522957/28748518-c44ef9f2-74b1-11e7-9e03-5cb12a3966e4.jpg");} </style> </head>
 
 <h1> Find your perfect flatshare. </h1>
-<style> h1 {position: relative; top: 50%; left: 50%; color: white; font-size: 40px; font-family: lato} </style>
+<style> h1 {position: absolute; top: 50%; left: 50%; color: white; font-size: 40px; font-family: lato} </style>
 
 <center> <h2> London's premier mature flatshare site </h2> </center>
 <style> h2 {color: white; font-size: 20px; font-family: lato} </style>
