--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@
 <img style="position: absolute; top: 25px; left: 25px" src="https://user-images.githubusercontent.com/30522957/28749162-895a91ee-74b6-11e7-8a19-19db18615589.png" alt="myHomeshare Logo">
 
 <button type="submit">submit</button>
+<style> button {color: blue} </style>
