--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@
 <img style="position: absolute; top: 25px; left: 25px" src="https://user-images.githubusercontent.com/30522957/28749162-895a91ee-74b6-11e7-8a19-19db18615589.png" alt="myHomeshare Logo">
 
 <button type="submit">submit</button>
-<style> button {position: fixed; height: 50px; width: 300px; top: 25px; right: 25px; color: 4CA9FF} </style>
+<style> button {position: fixed; height: 50px; width: 300px; top: 25px; right: 25px; background-color: 4CA9FF} </style>
