--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <style> button {position: fixed; height: 50px; width: 300px; top: 25px; right: 25px; background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
 
 <form action="Search">
-  <input type="text" placeholder="Location"><button type="button">Search</button>
-<style> button {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
+  <input type="text" placeholder="Location"><button type="button-2">Search</button>
+<style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
 </form>
