--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 
 <img style="position: absolute; top: 25px; left: 25px" src="https://user-images.githubusercontent.com/30522957/28749162-895a91ee-74b6-11e7-8a19-19db18615589.png" alt="myHomeshare Logo">
 
-<button type="button">Place a FREE advert</button>
-<style> button {position: fixed; height: 50px; width: 300px; top: 25px; right: 25px; background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
+<button type="button" class="button-1" >Place a FREE advert</button>
+<style> .button-1 {position: fixed; height: 50px; width: 300px; top: 25px; right: 25px; background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
+
+<form action="Search">
+  <input type="text" placeholder="Location"><button type="button" class="button-2" >Search</button>
+<style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
+</form>
