--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <button type="button" class="button-1" >Place a FREE advert</button>
 <style> .button-1 {position: fixed; height: 50px; width: 300px; top: 25px; right: 25px; background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
 
-<form action="Search">
-  <input type="text" placeholder="Location"><button type="button" class="button-2" >Search</button>
+<form action="Search" class="form-1"> <input type="text" placeholder="Location">
+<button type="button" class="button-2" >Search</button> </form>
 <style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
-</form>
+<style> .form-1 {color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
