--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@
 <form action="Search" class="form-1"> <input type="text" placeholder="Location">
 <button type="button" class="button-2" >Search</button> </form>
 <style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
-<style> .form-1 {color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
+<style> .form-1 {font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
