--- a/index.html
+++ b/index.html
@@ -20,4 +20,4 @@
 <style> .input-1 {font-size: 20px; font-family: lato} </style>
 </div>
 
-<style> .search-3 {position: fixed; top: 300px} </style>
+<style> .search-3 {position: fixed; top: 461px, height: 50px} </style>
