--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 <style> .button-1 {position: fixed; height: 50px; width: 300px; top: 25px; right: 25px; background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
 
 <div class="search-3" >
-<form action="Search" class="form-1"> 
-<input type="text" style="height: 50px" placeholder="Location">
-<button type="button" class="button-2" >Search</button> </form>
+
+<form action="Search" class="form-1" > 
+<input type="text" style="height: 50px" placeholder="Location" class="input-1">
+<button type="button" class="button-2" > Search </button>    
+</form> 
 <style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px; height: 50px} </style>
-<style> .form-1 {font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
+<style> .form-1 {height: 50px; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
+<style> .input-1 {border-width: 0px} </style>
+
 </div>
-<style> .search-3 {position: fixed; top: 461px} </style>
+<style> .search-3 {position: fixed; top: 300px} </style>
