--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </form> 
 <style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px; height: 50px} </style>
 <style> .form-1 {height: 50px; font-size: 20px; font-family: lato; border-width: 0px; border-radius: 3px} </style>
-<style> .input-1 {border-width: 0px} </style>
+<style> .input-1 {font-size: 20px; border-width: 0px} </style>
 
 </div>
 <style> .search-3 {position: fixed; top: 300px} </style>
