--- a/index.html
+++ b/index.html
@@ -22,4 +22,4 @@
 <style> .input-1 {font-size: 20px; border-width: 0px;} </style>
 
 </div>
-<style> .search-3 {position: fixed; top: 300px} </style>
+<style> .search-3 {position: fixed; top: 300px; width: 720px} </style>
