--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="search-3" >
 
 <form action="Search" class="form-1" > 
-<input type="text" style="height: 50px; padding-left: 25px" placeholder="Location" class="input-1"><button type="button" class="button-2" > Search rooms</button>    
+<input type="text" style="height: 50px; width: 500px; padding-left: 25px" placeholder="Location" class="input-1"><button type="button" class="button-2" > Search rooms</button>    
 </form> 
 <style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; padding-left: 25px; padding-right: 25px; border-width: 0px; height: 50px} </style>
 <style> .form-1 {height: 50px; font-size: 20px; font-family: lato; border-width: 0px} </style>
