--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head> <style> body {background-image: url("https://user-images.githubusercontent.com/30522957/28748518-c44ef9f2-74b1-11e7-9e03-5cb12a3966e4.jpg");} </style> </head>
 
 <h1> <span class="myHomeshare"> myHomeshare </span> Find your perfect flatshare. </h1>
-<style> h1 {position: fixed; width: 100%; text-align: center; top: 316px; color: white; font-size: 40px; font-family: lato}
+<style> h1 {position: fixed; width: 100%; text-align: center; top: 316px; color: white; font-size: 40px; font-family: lato; font-weight: normal;}
         .myHomeshare {font-family: futura; font-size: 41px; font-weight: normal; color: 4CA9FF}
 </style>
 
