--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <h1> <span class="myHomeshare"> myHomeshare </span> Find your perfect flatshare. </h1>
 <style> h1 {position: fixed; width: 100%; text-align: center; top: 316px; color: white; font-size: 40px; font-family: lato; font-weight: normal;}
-        .myHomeshare {font-family: futura; font-size: 41px; font-weight: normal; color: 4CA9FF}
+        .myHomeshare {font-family: futura; font-size: 41px; font-weight: normal; letter-spacing: -2.42px; color: 4CA9FF}
 </style>
 
 <center> <h2> London's premier mature flatshare site </h2> </center>
