--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </style>
 
 <center> <h2> London's premier mature flatshare site </h2> </center>
-<style> h2 {position: fixed; width: 100%; text-align: center; top: 396px; color: white; font-size: 20px; font-family: lato; font-weight: normal; letter-spacing: -0.62px;} </style>
+<style> h2 {position: fixed; width: 100%; text-align: center; top: 396px; color: white; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: -0.62px;} </style>
 
 <img style="position: absolute; top: 25px; left: 25px" src="https://user-images.githubusercontent.com/30522957/28749162-895a91ee-74b6-11e7-8a19-19db18615589.png" alt="myHomeshare Logo">
 
