--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <head> <style> body {background-image: url("https://user-images.githubusercontent.com/30522957/28748518-c44ef9f2-74b1-11e7-9e03-5cb12a3966e4.jpg");} </style> </head>
 
 <h1> <span class="myHomeshare"> myHomeshare </span> Find your perfect flatshare. </h1>
-<style> h1 {position: fixed; width: 100%; text-align: center; top: 316px; color: white; font-size: 40px; font-family: lato; font-weight: 400; letter-spacing: 0px;}
-        .myHomeshare {font-family: futura; font-size: 41px; font-weight: 350; letter-spacing: -2.42px; color: 4CA9FF}
+<style> h1 {position: fixed; width: 100%; text-align: center; top: 316px; color: white; font-size: 40px; font-family: lato; font-weight: 300; letter-spacing: 0px;}
+        .myHomeshare {font-family: futura; font-size: 41px; font-weight: normal; letter-spacing: -2.42px; color: 4CA9FF}
 </style>
 
 <center> <h2> London's premier mature flatshare site </h2> </center>
-<style> h2 {position: fixed; width: 100%; text-align: center; top: 396px; color: white; font-size: 20px; font-family: lato; font-weight: 400; letter-spacing: 0px;} </style>
+<style> h2 {position: fixed; width: 100%; text-align: center; top: 396px; color: white; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 0px;} </style>
 
 <img style="position: absolute; top: 25px; left: 25px" src="https://user-images.githubusercontent.com/30522957/28749162-895a91ee-74b6-11e7-8a19-19db18615589.png" alt="myHomeshare Logo">
 
 <button type="button" class="button-1" >Place a FREE advert</button>
-<style> .button-1 {position: fixed; height: 50px; width: 300px; top: 25px; right: 25px; background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; font-weight: normal; letter-spacing: -0.62px; border-width: 0px; border-radius: 3px} </style>
+<style> .button-1 {position: fixed; height: 50px; width: 300px; top: 25px; right: 25px; background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 0px; border-width: 0px; border-radius: 3px} </style>
 
 <div class="search-3" >
 
 <form action="Search" class="form-1" > 
 <input type="text" style="height: 50px; width: 500px; padding-left: 25px" placeholder="Location" class="input-1"><button type="button" class="button-2" > Search rooms</button>    
 </form> 
-<style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; font-weight: normal; letter-spacing: -0.62px; padding-left: 25px; padding-right: 25px; border-width: 0px; height: 50px} </style>
-<style> .form-1 {height: 50px; font-size: 20px; font-family: lato; font-weight: normal; letter-spacing: -0.62px; border-width: 0px} </style>
+<style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 0px; padding-left: 25px; padding-right: 25px; border-width: 0px; height: 50px} </style>
+<style> .form-1 {height: 50px; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 0px; border-width: 0px} </style>
 <style> .input-1 {font-size: 20px; border-width: 0px;} </style>
 
 </div>
