--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </form> 
 <style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 1px; padding-left: 25px; padding-right: 25px; border-width: 0px; height: 50px} </style>
 <style> .form-1 {height: 50px; color: BFBFBF; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 1px; border-width: 0px} </style>
-<style> .input-1 {font-size: 20px; border-width: 0px;} </style>
+<style> .input-1 {color: BFBFBF; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 1px; border-width: 0px} </style>
 
 </div>
 <style> .search-3 {position: fixed; top: 461px} </style>
