--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <input type="text" style="height: 50px; width: 500px; padding-left: 25px" placeholder="Location" class="input-1"><button type="button" class="button-2" > Search rooms</button>    
 </form> 
 <style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 1px; padding-left: 25px; padding-right: 25px; border-width: 0px; height: 50px} </style>
-<style> .form-1 {height: 50px; color: BFBFBF; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 1px; border-width: 0px} </style>
+<style> .form-1 {height: 50px; border-width: 0px} </style>
 <style> .input-1 {color: BFBFBF; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 1px} </style>
 
 </div>
