--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 <form action="Search" class="form-1" > 
 <input type="text" style="height: 50px; width: 500px; padding-left: 25px" placeholder="Location" class="input-1"><button type="button" class="button-2" > Search rooms</button>    
 </form> 
-<style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 1px; padding-left: 25px; padding-right: 25px; border-width: 0px; height: 50px} </style>
-<style> .form-1 {height: 50px; border-width: 0px} </style>
-<style> .input-1 {} </style>
+<style> .button-2 {background-color: 4CA9FF; color: white; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 1px; padding-left: 25px; padding-right: 25px; border-width: 0px; height: 50px}
+        .form-1 {height: 50px; border-width: 0px}
+        .input-1 {color: 7F7F7F; font-size: 20px; font-family: lato; font-weight: 300; letter-spacing: 1px}
+</style>
 
 </div>
 <style> .search-3 {position: fixed; top: 461px} </style>
