--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<style> 
+.button-2 {
+        font-family: lato; font-size: 20px; font-weight: 300; color: white; letter-spacing: 1px; padding-left: 25px; padding-right: 25px; background-color: 4CA9FF; border-width: 0px; height: 50px;
+}
+.form-1 {
+        height: 50px; border-width: 0px;
+}
+.input-1 {
+        font-family: lato; font-size: 20px; font-weight: 300; color: 7F7F7F; letter-spacing: 1px;
+}
+</style>
+
+
+
+
+
 <head> <style> body {background-image: url("https://user-images.githubusercontent.com/30522957/28748518-c44ef9f2-74b1-11e7-9e03-5cb12a3966e4.jpg");} </style> </head>
 
 <h1> <span class="myHomeshare"> myHomeshare </span> Find your perfect flatshare. </h1>
