--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <style> 
 .button-2 {
-        font-family: lato; font-size: 20px; font-weight: 300; color: white; letter-spacing: 1px; padding-left: 25px; padding-right: 25px; background-color: 4CA9FF; border-width: 0px; height: 50px;
+        font-family: lato; font-size: 20px; font-weight: 300; color: white; letter-spacing: 1px; padding-left: 25px; padding-right: 25px; background-color: 4CA9FF; height: 50px; border-width: 0px; 
 }
 .form-1 {
         height: 50px; border-width: 0px;
