--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <style> 
+
+h1 {
+        font-family: lato; font-size: 40px; font-weight: 300; color: white; letter-spacing: 1px; position: fixed; width: 100%; text-align: center; top: 316px;
+}        
+        
+
 .button-2 {
         font-family: lato; font-size: 20px; font-weight: 300; color: white; letter-spacing: 1px; padding-left: 25px; padding-right: 25px; background-color: 4CA9FF; height: 50px; border-width: 0px; 
 }
